update page hotel (hotel1)

--- a/PPl3/ExtraFiles/revenue.html
+++ b/PPl3/ExtraFiles/revenue.html
@@ -115,7 +115,25 @@
                       <li>Davis Ngo</li>
                       <li>300$</li>
                       <li>Paid</li>
+                      <li class="status">Return</li>
+                    </ul>
+                    <ul class="people_item">
+                      <li>Davis Ngo</li>
+                      <li>300$</li>
+                      <li>Paid</li>
                       <li class="status">In Progess</li>
+                    </ul>
+                    <ul class="people_item">
+                      <li>Davis Ngo</li>
+                      <li>300$</li>
+                      <li>Paid</li>
+                      <li class="status">In Progess</li>
+                    </ul>
+                    <ul class="people_item">
+                      <li>Davis Ngo</li>
+                      <li>300$</li>
+                      <li>Paid</li>
+                      <li class="status">Return</li>
                     </ul>
                     <ul class="people_item">
                       <li>Davis Ngo</li>
@@ -139,7 +157,7 @@
                       <li>Davis Ngo</li>
                       <li>300$</li>
                       <li>Paid</li>
-                      <li class="status">In Progess</li>
+                      <li class="status">Return</li>
                     </ul>
                     <ul class="people_item">
                       <li>Davis Ngo</li>
@@ -163,25 +181,7 @@
                       <li>Davis Ngo</li>
                       <li>300$</li>
                       <li>Paid</li>
-                      <li class="status">In Progess</li>
-                    </ul>
-                    <ul class="people_item">
-                      <li>Davis Ngo</li>
-                      <li>300$</li>
-                      <li>Paid</li>
-                      <li class="status">In Progess</li>
-                    </ul>
-                    <ul class="people_item">
-                      <li>Davis Ngo</li>
-                      <li>300$</li>
-                      <li>Paid</li>
-                      <li class="status">In Progess</li>
-                    </ul>
-                    <ul class="people_item">
-                      <li>Davis Ngo</li>
-                      <li>300$</li>
-                      <li>Paid</li>
-                      <li class="status">In Progess</li>
+                      <li class="status">Return</li>
                     </ul>
                     <ul class="people_item">
                       <li>Davis Ngo</li>
