upload change hotel.js, hotel.css and Add done_btn to the list_btn class in the footer

--- a/PPl3/ExtraFiles/hotel.html
+++ b/PPl3/ExtraFiles/hotel.html
@@ -610,6 +610,9 @@
                             <div class="next_btn">
                                 <button>Next</button>
                             </div>
+                            <div class="done_btn">
+                                <button>Done</button>
+                            </div>
                         </div>
                     </div>
                 </div>
