--- a/PPl3/ExtraFiles/evaluate.html
+++ b/PPl3/ExtraFiles/evaluate.html
@@ -53,6 +53,11 @@
         <div id="content">
             <div class="grid wide">
                 <div class="row no-gutter">
+                    <div class="col l-12 m-12 c-12">
+                        <div class="tittle">
+                            <h5>Review Hotel</h5>
+                        </div>
+                    </div>
                     <div class="col l-6 m-6 c-12">
                         <ul class="list_img">
                             <div class="container_img">
@@ -83,11 +88,12 @@
                     </div>
                     <div class="col l-6 m-6 c-12">
                         <div class="container_comment">
+                            <!-- Details hotel by <a></a> -->
                             <div class="tittle">
                                 <i class="fa-brands fa-think-peaks" style="color: #ff385c;"></i>
-                                <span>ABC Villa House</span>
+                                <span><a href="Product.html">ABC Villa House</a></span>
                             </div>
-                            <div class="list_star">
+                            <div class="list_star star_hotel">
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
@@ -99,6 +105,36 @@
                             </div>
                         </div>
                     </div>
+                    <!-- New Code -->
+                    <div class="col l-12 m-12 c-12">
+                        <div class="tittle">
+                            <h5>Review Host</h5>
+                        </div>
+                    </div>
+                    <div class="col l-6 m-6 c-12">
+                        <div class="box">
+                            <div class="avatar">
+                                <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                            </div>
+                            <!-- Details hotel by <a></a> -->
+                            <div class="name_host">
+                                <h2><a href="profile.html">My Uncle Baby</a></h2>
+                            </div>
+                            <div class="list_star star_host">
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col l-6 m-6 c-12">
+                        <div class="text text_host">
+                            <textarea name="comments" rows="4" cols="50"  id="comments"></textarea>
+                        </div>
+                    </div>
+                    <!-- End New Code -->
                     <div class="col l-12 m-12 c-12">
                         <div class="list_btn">
                             <button>Comment</button>
