update page notification

--- a/PPl3/ExtraFiles/admin.html
+++ b/PPl3/ExtraFiles/admin.html
@@ -1052,7 +1052,343 @@
           </div>
         </div>
         <div id="notification">
-
+          <div class="text"><i class="fa-solid fa-user"></i>Notification</div>
+          <div class="container_notifi">
+            <div class="item_notifi">
+              <div class="tittle">
+                <span>Notification</span>
+              </div>
+              <ul class="list_notifi">
+                <li>
+                  <div class="logo">
+                    <i class="fa-brands fa-think-peaks"></i>
+                  </div>
+                  <div>
+                    <div class="content_notifi">
+                      <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                    </div>
+                    <div class="time">
+                      <span>10:00:00 15/5/2024</span>
+                    </div>
+                  </div>
+                  <div class="close_btn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </li>
+                <li>
+                  <div class="logo">
+                    <i class="fa-brands fa-think-peaks"></i>
+                  </div>
+                  <div>
+                    <div class="content_notifi">
+                      <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                    </div>
+                    <div class="time">
+                      <span>10:00:00 15/5/2024</span>
+                    </div>
+                  </div>
+                  <div class="close_btn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </li>
+                <li>
+                  <div class="logo">
+                    <i class="fa-brands fa-think-peaks"></i>
+                  </div>
+                  <div>
+                    <div class="content_notifi">
+                      <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                    </div>
+                    <div class="time">
+                      <span>10:00:00 15/5/2024</span>
+                    </div>
+                  </div>
+                  <div class="close_btn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </li>
+                <li>
+                  <div class="logo">
+                    <i class="fa-brands fa-think-peaks"></i>
+                  </div>
+                  <div>
+                    <div class="content_notifi">
+                      <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                    </div>
+                    <div class="time">
+                      <span>10:00:00 15/5/2024</span>
+                    </div>
+                  </div>
+                  <div class="close_btn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </li>
+                <li>
+                  <div class="logo">
+                    <i class="fa-brands fa-think-peaks"></i>
+                  </div>
+                  <div>
+                    <div class="content_notifi">
+                      <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                    </div>
+                    <div class="time">
+                      <span>10:00:00 15/5/2024</span>
+                    </div>
+                  </div>
+                  <div class="close_btn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </li>
+                <li>
+                  <div class="logo">
+                    <i class="fa-brands fa-think-peaks"></i>
+                  </div>
+                  <div>
+                    <div class="content_notifi">
+                      <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                    </div>
+                    <div class="time">
+                      <span>10:00:00 15/5/2024</span>
+                    </div>
+                  </div>
+                  <div class="close_btn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </li>
+                <li>
+                  <div class="logo">
+                    <i class="fa-brands fa-think-peaks"></i>
+                  </div>
+                  <div>
+                    <div class="content_notifi">
+                      <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                    </div>
+                    <div class="time">
+                      <span>10:00:00 15/5/2024</span>
+                    </div>
+                  </div>
+                  <div class="close_btn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </li>
+                <li>
+                  <div class="logo">
+                    <i class="fa-brands fa-think-peaks"></i>
+                  </div>
+                  <div>
+                    <div class="content_notifi">
+                      <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                    </div>
+                    <div class="time">
+                      <span>10:00:00 15/5/2024</span>
+                    </div>
+                  </div>
+                  <div class="close_btn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </li>
+                <li>
+                  <div class="logo">
+                    <i class="fa-brands fa-think-peaks"></i>
+                  </div>
+                  <div>
+                    <div class="content_notifi">
+                      <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                    </div>
+                    <div class="time">
+                      <span>10:00:00 15/5/2024</span>
+                    </div>
+                  </div>
+                  <div class="close_btn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </li>
+                <li>
+                  <div class="logo">
+                    <i class="fa-brands fa-think-peaks"></i>
+                  </div>
+                  <div>
+                    <div class="content_notifi">
+                      <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                    </div>
+                    <div class="time">
+                      <span>10:00:00 15/5/2024</span>
+                    </div>
+                  </div>
+                  <div class="close_btn">
+                    <i class="fa-solid fa-xmark"></i>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="item_notifi">
+                <div class="tittle">
+                    <span>Report</span>
+                  </div>
+                  <ul class="list_notifi">
+                    <li>
+                      <div class="logo">
+                        <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                      </div>
+                      <div>
+                        <div class="content_notifi">
+                          <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                        </div>
+                        <div class="time">
+                          <span>10:00:00 15/5/2024</span>
+                        </div>
+                      </div>
+                      <div class="close_btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </li>
+                    <li>
+                      <div class="logo">
+                        <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                      </div>
+                      <div>
+                        <div class="content_notifi">
+                          <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                        </div>
+                        <div class="time">
+                          <span>10:00:00 15/5/2024</span>
+                        </div>
+                      </div>
+                      <div class="close_btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </li>
+                    <li>
+                      <div class="logo">
+                        <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                      </div>
+                      <div>
+                        <div class="content_notifi">
+                          <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                        </div>
+                        <div class="time">
+                          <span>10:00:00 15/5/2024</span>
+                        </div>
+                      </div>
+                      <div class="close_btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </li>
+                    <li>
+                      <div class="logo">
+                        <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                      </div>
+                      <div>
+                        <div class="content_notifi">
+                          <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                        </div>
+                        <div class="time">
+                          <span>10:00:00 15/5/2024</span>
+                        </div>
+                      </div>
+                      <div class="close_btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </li>
+                    <li>
+                      <div class="logo">
+                        <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                      </div>
+                      <div>
+                        <div class="content_notifi">
+                          <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                        </div>
+                        <div class="time">
+                          <span>10:00:00 15/5/2024</span>
+                        </div>
+                      </div>
+                      <div class="close_btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </li>
+                    <li>
+                      <div class="logo">
+                        <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                      </div>
+                      <div>
+                        <div class="content_notifi">
+                          <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                        </div>
+                        <div class="time">
+                          <span>10:00:00 15/5/2024</span>
+                        </div>
+                      </div>
+                      <div class="close_btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </li>
+                    <li>
+                      <div class="logo">
+                        <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                      </div>
+                      <div>
+                        <div class="content_notifi">
+                          <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                        </div>
+                        <div class="time">
+                          <span>10:00:00 15/5/2024</span>
+                        </div>
+                      </div>
+                      <div class="close_btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </li>
+                    <li>
+                      <div class="logo">
+                        <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                      </div>
+                      <div>
+                        <div class="content_notifi">
+                          <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                        </div>
+                        <div class="time">
+                          <span>10:00:00 15/5/2024</span>
+                        </div>
+                      </div>
+                      <div class="close_btn">
+                        <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </li>
+                    <li>
+                      <div class="logo">
+                        <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                      </div>
+                      <div>
+                        <div class="content_notifi">
+                          <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                        </div>
+                        <div class="time">
+                          <span>10:00:00 15/5/2024</span>
+                        </div>
+                      </div>
+                      <div class="close_btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </li>
+                    <li>
+                      <div class="logo">
+                        <img src="./assets/img/avatar_user/421958075_434107809290293_7065993535983171874_n.jpg" alt="">
+                      </div>
+                      <div>
+                        <div class="content_notifi">
+                          <p>Thang nguoi dung nay da bat dau co dau hieu phe da can duoc loai bo</p>
+                        </div>
+                        <div class="time">
+                          <span>10:00:00 15/5/2024</span>
+                        </div>
+                      </div>
+                      <div class="close_btn">
+                            <i class="fa-solid fa-xmark"></i>
+                        </div>
+                    </li>
+                  </ul>
+            </div>
+          </div>
         </div>
         <!-- new page -->
         <div id="analytics">
