Completed admin announcement and host rating

--- a/PPl3/ExtraFiles/admin.html
+++ b/PPl3/ExtraFiles/admin.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title> Responsive Sidebar Menu  | CodingLab </title>
-    <link rel="stylesheet" href="./assets/css/admin.css">
+    <link rel="stylesheet" href="./assets/css/admin.css?v=1">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -1221,7 +1221,7 @@
                 </li>
               </ul>
             </div>
-            <div class="item_notifi">
+            <!--<div class="item_notifi">
                 <div class="tittle">
                     <span>Report</span>
                   </div>
@@ -1387,7 +1387,7 @@
                         </div>
                     </li>
                   </ul>
-            </div>
+            </div>-->
           </div>
         </div>
         <!-- new page -->
